--- a/nginx.conf
+++ b/nginx.conf
@@ -2,10 +2,10 @@
 # A virtual host using mix of IP-, name-, and port-based configuration
 #
 
-map $http_upgrade $connection_upgrade {
-        default upgrade;
-        ''      close;
-}
+#map $http_upgrade $connection_upgrade {
+#        default upgrade;
+#        ''      close;
+#}
 
 server {
     listen       80 default_server;
