--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,12 @@
+#
+# A virtual host using mix of IP-, name-, and port-based configuration
+#
+
+map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+}
+
 server {
     listen       80 default_server;
     server_name wontmatch.com; # but it doesn't matter
